# zapret-control-tray

./: .gitignore  CMakeLists.txt
res/: app.manifest  app.rc  resource.h
src/: AppMessages.h  Config.cpp  Config.h  Logger.cpp  Logger.h  ProcessManager.cpp  ProcessManager.h  SettingsWindow.cpp  SettingsWindow.h  StrategyScanner.cpp  StrategyScanner.h  TrayIcon.cpp  TrayIcon.h  main.cpp
